created main sections

--- a/index.html
+++ b/index.html
@@ -53,9 +53,63 @@
 
       <section class="text-center">
         <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
-        <p class="lg:max-w-3xl mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,by injected humour, or randomised words which don't look even slightly believable. </p>
+        <p class="lg:max-w-3xl mb-10 mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,by injected humour, or randomised words which don't look even slightly believable. </p>
+        <!-- feathures -card container -->
 
+        <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lr:grid-cols-4">
+          <!-- first-cards -->
+          <div class="card w-96 p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+            <figure><img src="/images/tea-1.png" alt="Milk Tea" /></figure>
+            <div class="card-body justify-center">
+              <h2 class="text-xl font-bold">Milk Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+          <!-- 2nd-cards -->
+          <div class="card w-96 p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+            <figure><img src="/images/tea-2.png" alt="Black Tea" /></figure>
+            <div class="card-body justify-center">
+              <h2 class="text-xl font-bold">Black Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+          <!-- 3rdd-cards -->
+          <div class="card w-96 p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+            <figure><img src="/images/tea-3.png" alt="Lemon Tea" /></figure>
+            <div class="card-body justify-center">
+              <h2 class="text-xl font-bold">Lemon Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+          <!-- 4rth-cards -->
+          <div class="card w-96 p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+            <figure><img src="/images/tea-4.png" alt="Milk Tea" /></figure>
+            <div class="card-body justify-center">
+              <h2 class="text-xl font-bold">Shoes!</h2>
+              <p>Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+          </div>
       </section>
+<!-- great tea-fresh tea sections -->
+<section class="mb-24 flex gap-12 flext-col lg:flex-row">
+  <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
+    <div class="rounded-xl h-36 bg-gradient-to-r from-red-100 to-amber-100"></div>
+    <div class="row-span-2 bg-[#E6A6231A] rounded-lg px-32 py-12 flex justify-center "><img src="images/fresh-1.png" alt=""></div>
+    <div class="row span-2"><img src="images/fresh-2.png" alt=""></div>
+    <div></div>
+
+
+  </div>
+  <div class="space-y-5 flex-1">
+<h3 class="text-3xl font-extralight">Great Tea, Freshly <br>Presented</h3>
+  <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+  <h4 class="text-xl font-extrabold mt-8">Unique Taste</h4>
+  <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+  <h4>Premium Quality</h4>
+  <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+</div>
+</section>
 
     </main>
     <footer>
