created main sections updated

--- a/index.html
+++ b/index.html
@@ -94,13 +94,15 @@
 <!-- great tea-fresh tea sections -->
 <section class="mb-24 flex gap-12 flext-col lg:flex-row">
   <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
-    <div class="rounded-xl h-36 bg-gradient-to-r from-red-100 to-amber-100"></div>
-    <div class="row-span-2 bg-[#E6A6231A] rounded-lg px-32 py-12 flex justify-center "><img src="images/fresh-1.png" alt=""></div>
-    <div class="row span-2"><img src="images/fresh-2.png" alt=""></div>
-    <div></div>
+    <div class="rounded-xl h-36 bg-gradient-to-r from-red-100 to-amber-100">
+    </div>
+    <div class="row-span-2 bg-[#E6A6231A] rounded-lg px-32 py-12 flex justify-center "><img src="images/fresh-1.png" alt="">
+    </div>
+    <div class="row-span-2 bg-[#D9D9D9] rounded-lg px-32 py-12 flex justify-center "><img src="images/fresh-2.png" alt="">
+    </div>
+    <div class="rounded-xl h-36 bg-gradient-to-r from-red-50 to-amber-100">
+    </div>
 
-
-  </div>
   <div class="space-y-5 flex-1">
 <h3 class="text-3xl font-extralight">Great Tea, Freshly <br>Presented</h3>
   <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
